styling. Drawer changed to Dialog. TODO: SignInScreen logo ist not displayed.

--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
 
     <style>
       body {
-        padding: 20px;
+        padding: 0;
+        margin: 0;
       }
-      .leaflet-container {
-        height: 700px;
-        width: 80%;
-        margin: 0 auto;
+      html, body, .leaflet-container {
+        height: 800px;
+        width: 100%;
       }
     </style>
     <!--
